[gd_scene load_steps=4 format=3 uid="uid://cg7a3m26bgh"]

[ext_resource type="Script" uid="uid://b0eah50ovwa13" path="res://scripts/menu.gd" id="1_ra0lh"]
[ext_resource type="Theme" uid="uid://dj76vu4xs6qmx" path="res://assets/game/new_theme.tres" id="3_7724c"]
[ext_resource type="Texture2D" uid="uid://d22q6ufgfp213" path="res://assets/back.png" id="7_mwfaa"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ra0lh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Levels" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 439.0
offset_top = 76.0
offset_right = 674.0
offset_bottom = 185.0
theme = ExtResource("3_7724c")
text = "Levels"

[node name="Options" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 439.0
offset_top = 212.0
offset_right = 674.0
offset_bottom = 321.0
theme = ExtResource("3_7724c")
text = "Settings
"

[node name="Quit" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 21.0
offset_top = 508.0
offset_right = 218.0
offset_bottom = 590.0
theme = ExtResource("3_7724c")
text = "Exit"

[node name="skins" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 439.0
offset_top = 349.0
offset_right = 674.0
offset_bottom = 458.0
theme = ExtResource("3_7724c")
text = "Skin"

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(591, 284)
scale = Vector2(18.84, 18.84)
texture = ExtResource("7_mwfaa")

[connection signal="pressed" from="CanvasLayer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="CanvasLayer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/skins" to="." method="_on_skins_pressed"]
